NMEA/dev_ws/log/build_2024-01-15_00-48-55/nmea/stderr.log
  File "/home/user/Desktop/vilab/dev_ws/install/nmea/lib/python3.8/site-packages/nmea/nmea_subscriber.py", line 9
    from GGAParsedData
                     ^
SyntaxError: invalid syntax

